project 2 start visualization page & add readme docs links

--- a/project2-datavis/templates/index.html
+++ b/project2-datavis/templates/index.html
@@ -37,6 +37,8 @@
                         </p>
                         <p>Platform: {{ user_data.platform|capitalize }}</p>
                     </div>
+
+                    <a href="{{ url_for('visual') }}" class="login-btn">Open Visualizer</a>
                 {% endif %}
 
                 {% if recent_tracks %}
