--- a/project2-datavis/templates/visual.html
+++ b/project2-datavis/templates/visual.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Visualizer</title>
-
+    <style>
+        body { margin: 0; overflow: hidden; }
+        #visualization { width: 100vw; height: 100vh; }
+    </style>
 </head>
 <body>
-    <div id="visualization">
-        
-    </div>
+    <div id="visualization"></div>
     <script>
         var userId = "{{ user_id }}";
         var platform = "{{ platform }}";
         var listeningData = {{ listening_data.content|tojson }};
     </script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="static/js/visual.js"></script>
 </body>
 </html>
