--- a/project2-datavis/templates/visual.html
+++ b/project2-datavis/templates/visual.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Visualizer</title>
-    <style>
-        body { margin: 0; overflow: hidden; }
-        #visualization { width: 100vw; height: 100vh; }
-    </style>
+    <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
     <div id="visualization"></div>
