--- a/project2-datavis/templates/visual.html
+++ b/project2-datavis/templates/visual.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="visualization"></div>
+    <a href="/" id="backBtn" class="back-btn">← Back</a>
     <script>
         var userId = "{{ user_id }}";
         var platform = "{{ platform }}";
