--- a/project2-datavis/static/css/style.css
+++ b/project2-datavis/static/css/style.css
@@ -6,6 +6,10 @@ body {
     background-color: #000000;
     color: #ffffff;
     text-align: center;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #visualization {
@@ -14,10 +18,29 @@ body {
     height: 100vh;
 }
 
+.back-btn {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    padding: 10px 15px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #ffffffa3;
+    text-decoration: none;
+    border: 2px solid #ffffffa3;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+.back-btn.visible {
+    opacity: 1;
+}
+
 .layout {
-    max-width: 960px;
-    margin: 0 auto;
+    width: 70%;
     padding: 48px 16px 96px;
+    flex: 1;
+    margin: 0 auto;
 }
 
 header {
@@ -90,6 +113,11 @@ form label {
     border: 2px solid #d9000e;
 }
 
+.demo-btn {
+    background-color: #ff9900;
+    border: 2px solid #ffb31a;
+}
+
 .logout-btn {
     background-color: #808080;
     border: 2px solid #999999;
@@ -151,4 +179,12 @@ input[type="text"] {
     margin: 0 0 4px 0;
     text-transform: uppercase;
     letter-spacing: 0.05em;
+}
+
+footer {
+    min-height: 50px;
+    width: 100%;
+    color: #888888;
+    padding: 12px 0;
+    
 }
