project 3 map start

--- a/project3-village/templates/base.html
+++ b/project3-village/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="/">Map</a>
+        <a href="/map">Map</a>
         <a href="/home">My Home</a>
         <a href="/games">Games</a>
         <a href="/friends">Friends</a>
