--- a/project3-village/static/css/styles.css
+++ b/project3-village/static/css/styles.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #003059;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 nav {
