project 3 user authentication and map loading from db

--- a/project3-village/templates/index.html
+++ b/project3-village/templates/index.html
@@ -7,7 +7,7 @@
 
 <!-- sign in/up buttons -->
 <div class="auth-buttons">
-    <a href="/signin" class="button">Sign In</a>
+    <a href="/login" class="button">Log In</a>
     <a href="/signup" class="button">Sign Up</a>
 </div> 
 {% endblock %}
