project 3 signup style and account management route

--- a/project3-village/templates/login.html
+++ b/project3-village/templates/login.html
@@ -11,6 +11,7 @@
         <input type="password" id="password" name="password" required>
 
         <button type="submit">Sign In</button>
+        <a href="/signup" class="signup-link">Or Sign Up</a>
     </form>
 </div>
 {% endblock %}
