--- a/project3-village/static/css/styles.css
+++ b/project3-village/static/css/styles.css
@@ -147,7 +147,45 @@ h2 {
     flex-direction: column;
     align-items: center;
     gap: 15px;
-    width: 300px;
+    width: 40%;
+    font-size: 1.5em;
+}
+
+.signup-form button {
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    background-color: #e4ac50;
+    color: #913d00;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: futura-pt-condensed, sans-serif;
+    font-weight: bold;
+}
+
+.house-selection {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    margin: 10px 0;
+    width: 100%;
+}
+
+.house-option input[type="radio"] {
+    display: none;
+}
+
+.house-selector {
+    width: 150px;
+    height: 100px;
+    background-color: white;
+    border: 4px solid transparent;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.house-option input[type="radio"]:checked+.house-selector {
+    border-color: #e4ac50;
 }
 
 .flashes {
@@ -275,6 +313,7 @@ h2 {
     background-color: transparent;
     color: #003059;
     border: none;
+    cursor: pointer;
 }
 
 .add-btn {
@@ -286,5 +325,59 @@ h2 {
     cursor: pointer;
     font-family: inherit;
     font-weight: bold;
-    transition: background-color 0.2s;
+}
+
+.profile-container {
+    padding: 20px;
+    color: #003059;
+    background-color: #67d3d1;
+    height: calc(100vh - var(--nav-height));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+
+.profile-section h3 {
+    margin: 5px 0;
+    color: #003059;
+    font-size: 1.5rem;
+    padding-inline: 0;
+    text-align: center;
+}
+
+.profile-section form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 300px;
+}
+
+.profile-section button {
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    background-color: #e4ac50;
+    color: #913d00;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: futura-pt-condensed, sans-serif;
+    font-weight: bold;
+    width: fit-content;
+}
+
+.danger-zone {
+    border: 2px solid #b24f3a;
+    background-color: rgba(178, 79, 58, 0.1);
+}
+
+.danger-zone h3 {
+    color: #b24f3a;
+}
+
+.danger-zone button.delete-btn {
+    background-color: #b24f3a;
+    color: white;
 }
