--- a/project3-village/static/css/map.css
+++ b/project3-village/static/css/map.css
@@ -16,18 +16,34 @@
 }
 
 .house-placeholder {
-    background-color: #aaaf41;
-    border: 2px solid #666;
-    aspect-ratio: 2;
+    background-color: transparent;
+    border: none;
+    aspect-ratio: 1;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
     position: relative;
     cursor: pointer;
     transition: transform 0.2s;
 }
 
+.house-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    z-index: 0;
+}
 
 .house-label {
     color: #333;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 2px 6px;
+    border-radius: 10px;
+    font-size: 0.9em;
+    z-index: 1;
+    margin-bottom: 10px;
 }
