--- a/project3-village/static/css/styles.css
+++ b/project3-village/static/css/styles.css
@@ -177,15 +177,27 @@ h2 {
 
 .house-selector {
     width: 150px;
-    height: 100px;
+    height: 150px;
     background-color: white;
     border: 4px solid transparent;
     border-radius: 10px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.house-selector img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .house-option input[type="radio"]:checked+.house-selector {
     border-color: #e4ac50;
+    background-color: #fff8e1;
 }
 
 .flashes {
