--- a/project3-village/templates/base.html
+++ b/project3-village/templates/base.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="/map">Map</a>
-        <a href="/home">My Home</a>
+        <a href="/my_home">My Home</a>
         <a href="/games">Games</a>
         <a href="/friends">Friends</a>
         <div style="flex-grow: 1;"></div>
