project 3 cpanel test

--- a/project3-village/static/css/styles.css
+++ b/project3-village/static/css/styles.css
@@ -202,7 +202,7 @@ h2 {
 
 .flashes {
     list-style: none;
-    background: #ffdddd;
+    background: #e3e3e3;
     padding: 10px;
     margin: 10px;
 }
