--- a/project3-village/static/css/map.css
+++ b/project3-village/static/css/map.css
@@ -1,10 +1,12 @@
 .map-container {
-    background-color: #a0a0a0;
+    background-color: #67d3d1;
     padding: 50px;
+    padding-bottom: 100px; /* Increased padding to lift houses above waves */
     min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    position: relative;
 }
 
 .map-grid {
@@ -13,6 +15,18 @@
     gap: 20px;
     width: 100%;
     max-width: 1000px;
+    position: relative;
+    z-index: 1;
+    padding-bottom: 75px;
+}
+
+.map-waves {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    z-index: 0;
 }
 
 .house-placeholder {
